--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -9,7 +9,7 @@
       "login": "iamSahdeep",
       "name": "Sahdeep Singh",
       "avatar_url": "https://avatars1.githubusercontent.com/u/26563213?v=4",
-      "profile": "http://sahdeepsingh.com",
+      "profile": "https://sahdeepsingh.com",
       "contributions": [
         "code"
       ]
