--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: liquid_swipe
-description: A Flutter plugin to implement liquid Swipe effect to provided containers.
-version: 2.0.1
+description: A Flutter plugin to implement liquid Swipe effect to provided widgets.
+version: 2.0.2
 homepage: https://github.com/iamSahdeep/liquid_swipe_flutter
 
 environment:
